# ai-stock-tracker

./: main.py  pyproject.toml
public/chatgpt/: latest-new-on-indian-stock-market.md  latest-new-on-indian-stock-market_references.json  what-is-better-auth-and-how-it-works.md  what-is-better-auth-and-how-it-works_references.json  what-is-nextjs-15-and-react-19_references.json
src/ai_stock_tracker/: __init__.py
src/configs/: browser.py
src/constants/: index.py
src/crawler/: chatgpt_crawler.py  wikipedia.py
src/js_scripts/: __init__.py  chatgpt.py
